--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,5 @@
 
+
         <div class="single-hero">
             <div class="container">
                 <div class="row">                    
@@ -89,82 +90,13 @@
                                                 <div role="tabpanel" class="tab-pane" id="video">
                                                     <%= render "videos" %>
                                                 </div>
-                                                <div role="tabpanel" class="tab-pane" id="reviews">Reviews TEST</div>
+                                                <div role="tabpanel" class="tab-pane" id="reviews"> 
+                                                    <%= render "reviews" %>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                     
-                                    <div class="sl1">
-                                        <div class="padding-20 details-tabs">
-                                            <ul class="nav nav-tabs detail-tabs-ul" role="tablist">
-                                                <li role="presentation"><a href="#details1" aria-controls="home" role="tab" data-toggle="tab" class="h6 strong">Business Details</a></li>
-                                                <li role="presentation" class="active"><a href="#gallery1" aria-controls="profile" role="tab" data-toggle="tab" class="h6 strong">Gallery</a></li>
-                                                <li role="presentation"><a href="#reviews1" aria-controls="messages" role="tab" data-toggle="tab" class="h6 strong">Reviews</a></li>
-                                            </ul>
-                                            <div class="tab-content">
-                                                <div role="tabpanel" class="tab-pane" id="details1">...</div>
-                                                <div role="tabpanel" class="tab-pane active" id="gallery1">
-                                                    <div class="row no-margin">
-                                                        <div class="col-xs-4">
-                                                            <a href="#"><img width="280" height="280" src="http://lorempixel.com/280/280/abstract/2" alt=""></a>
-                                                            <h6 class="strong">Anderson .Paak</h6>
-                                                            <h6 class="strong gray-h6">Malibu</h6>
-                                                        </div>
-                                                        <div class="col-xs-4">
-                                                            <div class="mini-item">
-                                                                <a href="#"><img width="130" height="130" src="http://lorempixel.com/130/130/abstract/3" alt=""></a>
-                                                                <ul>
-                                                                    <li><h6 class="strong">Anderson .Paak</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Malibu</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Art Club, 2014</h6></li>
-                                                                    <li class="rate-form dark">8.5</li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-xs-4">
-                                                            <div class="mini-item">
-                                                                <a href="#"><img width="130" height="130" src="http://lorempixel.com/130/130/abstract/3" alt=""></a>
-                                                                <ul>
-                                                                    <li><h6 class="strong">Anderson .Paak</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Malibu</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Art Club, 2014</h6></li>
-                                                                    <li class="rate-form ">8.5</li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-xs-4">
-                                                            <div class="mini-item">
-                                                                <a href="#"><img width="130" height="130" src="http://lorempixel.com/130/130/abstract/3" alt=""></a>
-                                                                <ul>
-                                                                    <li><h6 class="strong">Anderson .Paak</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Malibu</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Art Club, 2014</h6></li>
-                                                                    <li class="rate-form dark">8.5</li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                        <div class="col-xs-4">
-                                                            <div class="mini-item">
-                                                                <a href="#"><img width="130" height="130" src="http://lorempixel.com/130/130/abstract/3" alt=""></a>
-                                                                <ul>
-                                                                    <li><h6 class="strong">Anderson .Paak</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Malibu</h6></li>
-                                                                    <li><h6 class="strong gray-h6">Art Club, 2014</h6></li>
-                                                                    <li class="rate-form ">8.5</li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div role="tabpanel" class="tab-pane" id="reviews1">...</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="text-center details-slider-buttons">
-                                    <button id="prev2"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-                                    <button id="next2"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
-                                </div>
                             </div>
                             
                         </div>
