--- a/app/views/businesses/_gallery.html.erb
+++ b/app/views/businesses/_gallery.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="col-lg-11">
 <div id="myTabContent" class="tab-content">
-     <div class="tab-pane fade active in" id="service-one"><br><br>
+     <div class="tab-pane fade active in" id="service-one">
         <div class="row">
             
             <div id="links" class="text-center" >
