--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -142,11 +142,11 @@
 <%= render 'payment' %>
 <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
 <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+Add a comment to this line
+<
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
 
-<!-- toolkit scripts -->
-<!-- /toolkit scripts -->
+
 <script>
 $(function() {
      $( "#business_search" ).autocomplete({
