--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,14 +23,17 @@
     <%= stylesheet_link_tag "toolkit.css", media: "all" %>
     <%= csrf_meta_tags %>    
     <%= favicon_link_tag 'YPIcon.ico' %>
+    
+
 
     <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
     
-    
-    <%# javascript_include_tag 'jquery.js' %>
-    <%# javascript_include_tag 'jquery_ujs.js' %>
-    <%= javascript_include_tag 'jquery.rateyo.js'%>
-    
+    <%= javascript_include_tag 'jquery.js'%>   <!-- Bootstrap Core CSS -->
+    <%= javascript_include_tag 'jquery.rateyo.js'%>   <!-- Bootstrap Core CSS -->
+
+    <%# stylesheet_link_tag "blueimp-gallery.min.css", media: "all" %>
+
+
     
     <%# javascript_include_tag 'jquery.blueimp-gallery.min.js', 'data-turbolinks-track' => true %>
     
@@ -49,8 +52,7 @@
     <%= render "javascript" %>
     <%= render "layouts/footer" %>
 
-    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
-     <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
+
     <script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
