--- a/app/views/businesses/_reviews.html.erb
+++ b/app/views/businesses/_reviews.html.erb
@@ -4,48 +4,20 @@
         <div class="row">
          <% if current_user %>
             <div class="well">                
-                <% if !Rating.user_rate(@business.id, current_user.id) %>
                 <h4>Leave a Rate:</h4>
                 <form role="form">
                     <div class="form-group">                   
                         <div id="rateUser"></div>                      
                     </div>
-                    <button id="getRating" class="btn btn-primary">Submit</button>
+                    <button type = "submit" id="getRating" class="btn btn-primary">
+                    <% if Rating.find_by(user_id: current_user.id, business_id: @business.id) %>
+                        Update
+                    <% else %>
+                        Submit
+                    <% end %>
+                    </button>
                 </form>
-                <% else %>
-                <h4>Change your Rate:</h4>
-                  <form role="form">
-                    <div class="form-group">                   
-                        <div id="rateUserUpdate"></div>                      
-                    </div>
-                 <button id="getRatingUpdate" class="btn btn-primary">Update</button>
-                  </form>
-                    <script type="text/javascript">
-                        $(function () {
-
-                            $("#rateUserUpdate").rateYo({
-                                rating: <%= Rating.where(business_id: @business.id, user_id: current_user.id).first.score  %>,
-                            })
-                                          
-                          });
-
-                            $(function () {
-                                 
-                                var $rateUserupdate = $("#rateUserUpdate").rateYo();
-                                var $rateId = <%= Rating.where(business_id: @business.id, user_id: current_user.id).first.id %>
-
-                                $("#getRatingUpdate").click(function () {
-                                    var rating = $rateUserupdate.rateYo("rating");
-                                    $.ajax({
-                                        url: '/rating/'+$rateId,
-                                        type: 'PATCH',
-                                        data: { score: rating }
-                                });                              
-                            });                                 
-                         });
-
-                    </script>
-                <% end %>
+               
             </div>
         <% else %>
             <div class="well">
@@ -53,14 +25,14 @@
             </div
         <% end %>
             <hr>
-
+            <div id ="rating-1">
             <% @rating.each do |rate| %>
                 <div class="media">
                     <a class="pull-left" href="#">
                         <% if User.find(rate.user_id).logo.blank? %>
                             <%= image_tag "noprofile1.png", width: "64", height: "64", :class => "media-object"%>
                         <% else %>
-                            <%= image_tag User.find(rate.user_id).logo_url, width: "64", height: "64", :class => "media-object"%>                         
+                            <%= image_tag User.find(rate.user_id).logo_url, width: "64", height: "64", :class => "media-object"%>                        
                         <% end %>
                     </a>
                     <div class="media-body">
@@ -69,8 +41,7 @@
                         </h4>
                         <div id="rateYo<%= rate.id %>"></div>
                     </div>
-                
-
+              </div>
                 <script type="text/javascript">
                     $(function () {
                      
@@ -81,43 +52,24 @@
 
                     });
                 </script>
-              </div>
         <% end %>
-
+      </div> 
 
         </div>
         <!-- <div class="alert alert-info text-center" role="alert"> No reviews</div>                            -->
     </div>
 
+    <div id = "business_id" style = "display: none;"> <%= @business.id %> </div>
+<% rating = Rating.find_by(user_id: current_user.id, business_id: @business.id) %>
+<% if  rating %>
+    <script>
+   $(function () {
 
-    
+    $("#rateUser").rateYo({
+      rating: <%= rating.score %>
+   })
+                          
+   });
+  </script>
 
-<script type="text/javascript">
-    $(function () {
-
-        $("#rateUser").rateYo({
-            rating: 0,
-            precision: 2
-        })
-                      
-    });
-
-        $(function () {
-             
-            var $rateUser = $("#rateUser").rateYo();
-                 
-            $("#getRating").click(function () {
-                 
-                    /* get rating */
-            var rating = $rateUser.rateYo("rating");
-            $.ajax({
-                url: '/rating',
-                type: 'POST',
-                data: { score: rating, business_id: <%= @business.id %> }
-            });
-          
-        });
-             
-    });
-    
-</script>
+ <% end %>
