--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -80,72 +80,35 @@
       </div>
     </div>
     <div class="row view-items ">
+    <% @businesses_rate.each do |business_rate| %>
       <div class="col-xs-4">
         <div class="thumbnail">
-          <%= image_tag 'food1.png' %>
+          <% if business_rate.logo.blank? %>
+          <%= image_tag "nologo.png"%>
+          <% else %>
+          <%= image_tag business_rate.logo_url%>
+          <% end %>
           <div class="caption">
-            <h4>Cherry Tomato Salad</h4>
-            <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell  a special treat a special treat a special treat a special treattoo</h6>
+            <h4><%= link_to business_rate.name, business_path(business_rate) %></h4>
+            <h6><%= business_rate.description %></h6>
             <div class="vert-offset-top-2"></div>
             <ul class="list-inline likes-ul">
-              <li><span class="label label-default">Default</span></li>
-              <li><span class="label label-default">Primary</span></li>
+              <li><span class="label label-default"><%=business_rate.email %></span></li>
             </ul>
             <ul class="list-inline likes-ul pull-right">
-              <li><i class="fa fa-heart" aria-hidden="true"></i>8</li>
-              <li><i class="fa fa-comment-o" aria-hidden="true"></i>8</li>
+              <li><i class="fa fa-star-o" aria-hidden="true"></i><%= business_rate.average_rate %></li>
+              <li><i class="fa fa-comment-o" aria-hidden="true"></i><%= business_rate.comments.size %></li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="col-xs-4">
-        <div class="thumbnail">
-          <%= image_tag 'food2.png' %>
-          <div class="caption">
-            <h4>Cherry Tomato Salad</h4>
-            <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
-            <div class="vert-offset-top-2"></div>
-            <ul class="list-inline likes-ul">
-              <li><span class="label label-default">Default</span></li>
-              <li><span class="label label-default">Primary</span></li>
-            </ul>
-            <ul class="list-inline likes-ul pull-right">
-              <li><i class="fa fa-heart" aria-hidden="true"></i>8</li>
-              <li><i class="fa fa-comment-o" aria-hidden="true"></i>8</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-4">
-        <div class="thumbnail">
-        <%= image_tag 'food3.png' %>
-          <div class="caption">
-            <h4>Cherry Tomato Salad</h4>
-            <h6>Pine nuts are a special treat in any salad, but the other ingredients are swell too</h6>
-            <div class="vert-offset-top-2"></div>
-            <ul class="list-inline likes-ul">
-              <li><span class="label label-default">Default</span></li>
-              <li><span class="label label-default">Primary</span></li>
-            </ul>
-            <ul class="list-inline likes-ul pull-right">
-              <li><i class="fa fa-heart" aria-hidden="true"></i>8</li>
-              <li><i class="fa fa-comment-o" aria-hidden="true"></i>8</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <% end %>
       <div class="col-xs-12 text-center vert-offset-top-4"><a href="#" class="btn btn-gray">View All <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
     </div>
   </div>
 </section>
 
 <%= render 'payment' %>
-<script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript"></script>
-<script src="http://malsup.github.io/jquery.cycle.all.js" type="text/javascript"></script>
-Add a comment to this line
-<
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
-
 
 <script>
 $(function() {
