--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -71,16 +71,16 @@
                             <div class="sl1">
                                 <div class="padding-20 details-tabs">
                                     <ul class="nav nav-tabs detail-tabs-ul" role="tablist">
-                                        <li role="presentation"><a href="#details" aria-controls="home" role="tab" data-toggle="tab" class="h6 strong">Business Details</a></li>
-                                        <li role="presentation"  class="active"><a href="#gallery" aria-controls="profile" role="tab" data-toggle="tab" class="h6 strong">Gallery</a></li>
+                                        <li role="presentation" class="active"><a href="#details" aria-controls="home" role="tab" data-toggle="tab" class="h6 strong">Business Details</a></li>
+                                        <li role="presentation"><a href="#gallery" aria-controls="profile" role="tab" data-toggle="tab" class="h6 strong">Gallery</a></li>
                                         <li role="presentation"><a href="#video" aria-controls="profile" role="tab" data-toggle="tab" class="h6 strong">Video</a></li>
                                         <li role="presentation"><a href="#reviews" aria-controls="messages" role="tab" data-toggle="tab" class="h6 strong">Reviews</a></li>
                                     </ul>
                                     <div class="tab-content">
-                                        <div role="tabpanel" class="tab-pane" id="details">
+                                        <div role="tabpanel" class="tab-pane active" id="details">
                                             <%= render "details" %>
                                         </div>
-                                        <div role="tabpanel" class="tab-pane active" id="gallery">
+                                        <div role="tabpanel" class="tab-pane " id="gallery">
                                             <%= render "gallery" %>
                                         </div>
                                         <div role="tabpanel" class="tab-pane" id="video">
