--- a/app/assets/fonts/icomoon/style.css
+++ b/app/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?i5trg1');
-    src:    url('fonts/icomoon.eot?i5trg1#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?i5trg1') format('truetype'),
-        url('fonts/icomoon.woff?i5trg1') format('woff'),
-        url('fonts/icomoon.svg?i5trg1#icomoon') format('svg');
+    src:    url('icomoon.eot?i5trg1');
+    src:    url('icomoon.eot?i5trg1#iefix') format('embedded-opentype'),
+        url('icomoon.ttf?i5trg1') format('truetype'),
+        url('icomoon.woff?i5trg1') format('woff'),
+        url('icomoon.svg?i5trg1#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
