--- a/app/views/businesses/_info.html.erb
+++ b/app/views/businesses/_info.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="padding-left:40px;">
+<div class="container" style="margin-left:-15px;">
         <div class="msg"><span class="glyphicon glyphicon glyphicon-ok"></span> Regular hours</div>
           <% unless @business.working_days.blank? %>  
             <% @business.working_days.each do |work| %>
